# inference-project-template

./: .flake8  LICENSE  README.md  notebook.ipynb  post-install.sh  pyproject.toml
