[tool.poetry]
name = "inference-template"
version = "0.0.1"
description = "Project template for python inference projects for PyMC3"
authors = ["binary-signal <binary-signal@users.noreply.github.com >"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
pymc3 = "^3.9.3"
matplotlib = "^3.3.1"
numpy = "^1.19.1"
cython = "^0.29.21"
jupyter = "^1.0.0"
jupyter_contrib_nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
seaborn = "^0.10.1"
graphviz = "^0.14.1"
arviz = "^0.9.0"
bpython = "^0.19"

[tool.poetry.dev-dependencies]
mypy = {version = "^0.782"}
flake8 = {version = "^3.8.3"}
flake8-docstrings = "^1.5.0"
flake8-mypy = "^17.8.0"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.3"
flake8-builtins = "^1.5.3"
flake8-annotations-coverage = "^0.0.4"
flake8-typing-imports = "^1.9.0"
flake8-string-format = "^0.3.0"
flake8-broken-line = "^0.2.0"
seed-isort-config = "^2.2.0"
isort = {extras = ["pyproject"], version = "^5.0.5"}
black = {version = "*", allow-prereleases = true}
pandas-vet = "^0.2.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
combine_as_imports = true

[tool.black]
line-length = 90
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.mypy_cache
  | \.ipynb_checkpoints
  | \.tox
  | \.nox
  | \.venv
  | \.idea
  | \.vscode
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
